--- a/testspiel Alpha 3.76.html
+++ b/testspiel Alpha 3.76.html
@@ -286,6 +286,54 @@ canvas {
 @keyframes blink {
   50% { opacity: 0.4; }
 }
+#version-label {
+  position: absolute;
+  bottom: 6px;
+  left: 8px;
+  font-size: 12px;
+  color: rgba(255,255,255,0.75);
+  pointer-events: none;
+  font-family: sans-serif;
+}
+#patch-btn {
+  position: absolute;
+  bottom: 6px;
+  left: 98px;
+  font-size: 11px;
+  line-height: 1;
+  padding: 4px 6px;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.18);
+  color: rgba(255,255,255,0.9);
+  border: 1px solid rgba(255,255,255,0.35);
+  pointer-events: auto;
+  cursor: pointer;
+  user-select: none;
+  font-family: sans-serif;
+}
+#patch-modal {
+  position: absolute;
+  bottom: 36px;
+  left: 8px;
+  max-width: 280px;
+  padding: 10px 12px;
+  border-radius: 10px;
+  background: rgba(30, 22, 22, 0.92);
+  color: #fff;
+  font-size: 12px;
+  line-height: 1.35;
+  box-shadow: 0 8px 18px rgba(0,0,0,0.35);
+  display: none;
+  pointer-events: auto;
+}
+#patch-modal .close {
+  display: inline-block;
+  margin-top: 6px;
+  font-size: 11px;
+  opacity: 0.85;
+  text-decoration: underline;
+  cursor: pointer;
+}
 </style>
 </head>
 <body>
@@ -358,6 +406,46 @@ canvas {
   let audioCtx = null;
   let masterGain = null;
   let volume = 0.4;
+  // --- Menü-Melodie (minimal) ---
+  let menuMelodyNodes = [];
+  let menuThemeTimer = null;
+  function stopMenuTheme() {
+    for (const node of menuMelodyNodes) {
+      try { node.stop?.(); } catch (e) {}
+      try { node.disconnect?.(); } catch (e) {}
+    }
+    menuMelodyNodes.length = 0;
+    if (menuThemeTimer) {
+      clearInterval(menuThemeTimer);
+      menuThemeTimer = null;
+    }
+  }
+  function playMenuTheme() {
+    try { ensureAudio?.(); } catch (e) {}
+    if (!audioCtx || !masterGain) return;
+    stopMenuTheme();
+    const now = audioCtx.currentTime;
+    const notes = [261.63, 293.66, 329.63, 392.00, 329.63, 293.66];
+    const dur = 0.23, gap = 0.05, gain = 0.05;
+    const loopLen = notes.length * (dur + gap);
+    function schedule(startAt) {
+      for (let i = 0; i < notes.length; i++) {
+        const t0 = startAt + i * (dur + gap);
+        const osc = audioCtx.createOscillator();
+        const g = audioCtx.createGain();
+        osc.type = 'triangle';
+        osc.frequency.value = notes[i];
+        g.gain.value = gain;
+        osc.connect(g).connect(masterGain);
+        osc.start(t0);
+        osc.stop(t0 + dur);
+        menuMelodyNodes.push(osc, g);
+      }
+    }
+    schedule(now + 0.05);
+    const intervalMs = Math.floor((loopLen + 0.2) * 1000);
+    menuThemeTimer = setInterval(() => schedule(audioCtx.currentTime + 0.02), intervalMs);
+  }
   let gameTimeScale = 1;
   let tutorial = null;
   let tutorialHintBox = null;
@@ -438,6 +526,28 @@ canvas {
     if (theme.includes('garden') || theme.includes('garten')) base = 'rgba(20,60,30,0.06)';
     ctx.fillStyle = base;
     ctx.fillRect(0, gy, WIDTH, HEIGHT - gy);
+  }
+
+  // --- Helper: hat die Deko Boden unter sich? (für vertikales Level 6) ---
+  function hasSolidGroundBelow(x, y, maxDropPx = 48, level = currentLevel) {
+    const lvl = level || currentLevel;
+    if (!lvl) return false;
+    const minY = y;
+    const maxY = y + maxDropPx;
+    const solids = (lvl.platforms || []).concat(lvl.cloudBlocks || []);
+    for (const solid of solids) {
+      const left = typeof solid.left === 'number' ? solid.left : (solid.x ?? 0);
+      const right = typeof solid.right === 'number' ? solid.right : ((solid.x ?? 0) + (solid.w ?? 0));
+      const top = typeof solid.top === 'number' ? solid.top : (solid.y ?? 0);
+      if (top >= minY && top <= maxY && x >= left - 4 && x <= right + 4) {
+        return true;
+      }
+    }
+    const groundY = lvl.groundY ?? null;
+    if (groundY !== null && groundY >= minY && groundY <= maxY) {
+      return true;
+    }
+    return false;
   }
 
   function createLivingBackground() {
@@ -2445,6 +2555,22 @@ canvas {
       }
     }
     drawDecor(cam) {
+      const idx = typeof levels !== 'undefined' ? levels.indexOf(this) : -1;
+      const isBonusVerticalLevel = this.vertical && (
+        idx === 6 || ((this.name || '').toLowerCase().includes('garten'))
+      );
+      let decorations = this.decor;
+      if (isBonusVerticalLevel) {
+        decorations = decorations.filter(deco => {
+          const type = deco && deco.type ? deco.type : '';
+          const isTreeOrFlower = /tree|flower|baum|blume/i.test(type);
+          if (!isTreeOrFlower) return true;
+          const centerX = typeof deco.x === 'number' ? deco.x + ((deco.w || 0) / 2) : 0;
+          const baseY = typeof deco.y === 'number' ? deco.y : 0;
+          const sampleY = baseY + (deco.h ? deco.h * 0.25 : 0);
+          return hasSolidGroundBelow(centerX, sampleY, 56, this);
+        });
+      }
       const drawCarpet = deco => {
         const px = deco.x - cam.x;
         const py = deco.y - cam.y;
@@ -2718,7 +2844,7 @@ canvas {
       };
 
       const deferredWindows = [];
-      this.decor.forEach(deco => {
+      decorations.forEach(deco => {
         if (deco.type === 'window') {
           deferredWindows.push(deco);
           return;
@@ -3705,6 +3831,7 @@ canvas {
     if (state === GameState.GAMEOVER) buildGameOverMenu();
     if (state === GameState.VICTORY) buildVictoryMenu();
     if (state === GameState.ENDING) buildEndingMenu();
+    if (state === GameState.TITLE) { playMenuTheme(); } else { stopMenuTheme(); }
   }
 
   function buildTitleMenu() {
@@ -3721,6 +3848,40 @@ canvas {
       <small>Steuerung: WASD / Pfeile, Space = Sprung, P/Esc = Pause, Enter/E = Bestätigen</small>
     `;
     overlay.appendChild(menu);
+    // --- Versionslabel & Patchplan (minimal) ---
+    (function() {
+      const oldVer = document.getElementById('version-label');
+      if (oldVer && oldVer.parentElement) oldVer.parentElement.removeChild(oldVer);
+      const versionLabel = document.createElement('div');
+      versionLabel.id = 'version-label';
+      versionLabel.textContent = 'Alpha 3.76';
+      overlay.appendChild(versionLabel);
+
+      const oldBtn = document.getElementById('patch-btn');
+      if (oldBtn && oldBtn.parentElement) oldBtn.parentElement.removeChild(oldBtn);
+      const patchBtn = document.createElement('div');
+      patchBtn.id = 'patch-btn';
+      patchBtn.textContent = 'Patchplan';
+      overlay.appendChild(patchBtn);
+
+      const oldModal = document.getElementById('patch-modal');
+      if (oldModal && oldModal.parentElement) oldModal.parentElement.removeChild(oldModal);
+      const modal = document.createElement('div');
+      modal.id = 'patch-modal';
+      modal.innerHTML = `
+        <strong>Alpha 3.76 – Änderungen</strong><br>
+        • Titelscreen: Versionsnummer & Patchplan-Button<br>
+        • Menü: einfache Melodie<br>
+        • Bonus-Level 6 (vertikal): keine Bäume/Blumen „im Himmel“<br>
+        <span class="close">Schließen</span>
+      `;
+      overlay.appendChild(modal);
+
+      patchBtn.addEventListener('click', () => {
+        modal.style.display = (modal.style.display === 'none' || !modal.style.display) ? 'block' : 'none';
+      });
+      modal.querySelector('.close').addEventListener('click', () => { modal.style.display = 'none'; });
+    })();
     const startBtn = document.getElementById('start-btn');
     startBtn.addEventListener('click', () => {
       ensureAudio();
@@ -4735,6 +4896,7 @@ canvas {
   setReduceMotion(reduceMotion);
   buildHud();
   buildTitleMenu();
+  if (gameState === GameState.TITLE) playMenuTheme();
 })();
 </script>
 </body>
