--- a/testspiel Alpha 3.76.html
+++ b/testspiel Alpha 3.76.html
@@ -286,6 +286,71 @@ canvas {
 @keyframes blink {
   50% { opacity: 0.4; }
 }
+#version-label {
+  position: absolute;
+  bottom: 6px;
+  left: 8px;
+  font-size: 12px;
+  color: rgba(255,255,255,0.75);
+  pointer-events: none;
+  font-family: sans-serif;
+}
+#patch-btn {
+  position: absolute;
+  bottom: 6px;
+  left: 98px;
+  font-size: 11px;
+  line-height: 1;
+  padding: 4px 6px;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.18);
+  color: rgba(255,255,255,0.9);
+  border: 1px solid rgba(255,255,255,0.35);
+  pointer-events: auto;
+  cursor: pointer;
+  user-select: none;
+  font-family: sans-serif;
+}
+#patch-modal {
+  position: absolute;
+  bottom: 36px;
+  left: 8px;
+  max-width: 280px;
+  padding: 10px 12px;
+  border-radius: 10px;
+  background: rgba(30, 22, 22, 0.92);
+  color: #fff;
+  font-size: 12px;
+  line-height: 1.35;
+  box-shadow: 0 8px 18px rgba(0,0,0,0.35);
+  display: none;
+  pointer-events: auto;
+}
+#patch-modal .close {
+  display: inline-block;
+  margin-top: 6px;
+  font-size: 11px;
+  opacity: 0.85;
+  text-decoration: underline;
+  cursor: pointer;
+}
+/* hinzugefügt für Menümusik */
+#music-toggle {
+  position: absolute;
+  bottom: 6px;
+  left: 178px;
+  font-size: 11px;
+  line-height: 1;
+  padding: 4px 6px;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.18);
+  color: rgba(255,255,255,0.9);
+  border: 1px solid rgba(255,255,255,0.35);
+  pointer-events: auto;
+  cursor: pointer;
+  user-select: none;
+  font-family: sans-serif;
+}
 </style>
 </head>
 <body>
@@ -358,6 +423,113 @@ canvas {
   let audioCtx = null;
   let masterGain = null;
   let volume = 0.4;
+  // --- Menümusik: automatische Titelscreen-Melodie (hinzugefügt für Menümusik) ---
+  let menuMusicEnabled = true;
+  let menuThemeActive = false;
+  let menuThemeNextStart = 0;
+  let menuMelodyNodes = [];
+  let menuThemeTimer = null;
+  const MENU_AUDIO_UNLOCK_EVENTS = ['pointerdown', 'keydown', 'touchstart'];
+  let menuMusicUnlockHandler = null;
+  function unbindMenuMusicUnlock() {
+    if (!menuMusicUnlockHandler) return;
+    for (const ev of MENU_AUDIO_UNLOCK_EVENTS) {
+      window.removeEventListener(ev, menuMusicUnlockHandler);
+    }
+    menuMusicUnlockHandler = null;
+  }
+  function bindMenuMusicUnlock() {
+    if (menuMusicUnlockHandler) return;
+    menuMusicUnlockHandler = () => {
+      ensureAudio();
+      if (!audioCtx) return;
+      const resumePromise = audioCtx.resume?.();
+      if (resumePromise && typeof resumePromise.then === 'function') {
+        resumePromise.then(() => {
+          if (!audioCtx || audioCtx.state === 'suspended') return;
+          unbindMenuMusicUnlock();
+          if (gameState === GameState.TITLE && menuMusicEnabled) {
+            playMenuTheme();
+          }
+        }).catch(() => {});
+      }
+      if (audioCtx.state === 'suspended') return;
+      unbindMenuMusicUnlock();
+      if (gameState === GameState.TITLE && menuMusicEnabled) {
+        playMenuTheme();
+      }
+    };
+    for (const ev of MENU_AUDIO_UNLOCK_EVENTS) {
+      window.addEventListener(ev, menuMusicUnlockHandler);
+    }
+  }
+  function stopMenuTheme() {
+    for (const node of menuMelodyNodes) {
+      try { node.stop?.(); } catch (e) {}
+      try { node.disconnect?.(); } catch (e) {}
+    }
+    menuMelodyNodes.length = 0;
+    if (menuThemeTimer) {
+      clearInterval(menuThemeTimer);
+      menuThemeTimer = null;
+    }
+    menuThemeActive = false;
+    menuThemeNextStart = 0;
+    unbindMenuMusicUnlock();
+  }
+  function playMenuTheme() {
+    if (!menuMusicEnabled) {
+      stopMenuTheme();
+      return;
+    }
+    try { ensureAudio?.(); } catch (e) {}
+    if (!audioCtx || !masterGain) return;
+    const resumePromise = audioCtx.resume?.();
+    if (resumePromise && typeof resumePromise.then === 'function') {
+      resumePromise.catch(() => {});
+    }
+    if (audioCtx.state === 'suspended') {
+      bindMenuMusicUnlock();
+      return;
+    }
+    unbindMenuMusicUnlock();
+    if (menuThemeActive) return;
+    stopMenuTheme();
+    menuThemeActive = true;
+    const notes = [261.63, 293.66, 329.63, 392.00, 329.63, 293.66];
+    const dur = 0.23;
+    const gap = 0.05;
+    const gain = 0.05;
+    const loopLen = notes.length * (dur + gap);
+    menuThemeNextStart = audioCtx.currentTime + 0.05;
+    const schedule = (startAt) => {
+      for (let i = 0; i < notes.length; i++) {
+        const t0 = startAt + i * (dur + gap);
+        const osc = audioCtx.createOscillator();
+        const g = audioCtx.createGain();
+        osc.type = 'triangle';
+        osc.frequency.value = notes[i];
+        g.gain.value = gain;
+        osc.connect(g).connect(masterGain);
+        osc.start(t0);
+        osc.stop(t0 + dur);
+        // hinzugefügt für Menümusik: abgelaufene Nodes automatisch entfernen
+        osc.onended = () => {
+          try { g.disconnect?.(); } catch (e) {}
+          const oscIndex = menuMelodyNodes.indexOf(osc);
+          if (oscIndex !== -1) menuMelodyNodes.splice(oscIndex, 1);
+          const gainIndex = menuMelodyNodes.indexOf(g);
+          if (gainIndex !== -1) menuMelodyNodes.splice(gainIndex, 1);
+        };
+        menuMelodyNodes.push(osc, g);
+      }
+    };
+    schedule(menuThemeNextStart);
+    menuThemeTimer = setInterval(() => {
+      menuThemeNextStart += loopLen;
+      schedule(menuThemeNextStart);
+    }, Math.max(120, Math.floor(loopLen * 1000)));
+  }
   let gameTimeScale = 1;
   let tutorial = null;
   let tutorialHintBox = null;
@@ -438,6 +610,28 @@ canvas {
     if (theme.includes('garden') || theme.includes('garten')) base = 'rgba(20,60,30,0.06)';
     ctx.fillStyle = base;
     ctx.fillRect(0, gy, WIDTH, HEIGHT - gy);
+  }
+
+  // --- Helper: hat die Deko Boden unter sich? (für vertikales Level 6) ---
+  function hasSolidGroundBelow(x, y, maxDropPx = 48, level = currentLevel) {
+    const lvl = level || currentLevel;
+    if (!lvl) return false;
+    const minY = y;
+    const maxY = y + maxDropPx;
+    const solids = (lvl.platforms || []).concat(lvl.cloudBlocks || []);
+    for (const solid of solids) {
+      const left = typeof solid.left === 'number' ? solid.left : (solid.x ?? 0);
+      const right = typeof solid.right === 'number' ? solid.right : ((solid.x ?? 0) + (solid.w ?? 0));
+      const top = typeof solid.top === 'number' ? solid.top : (solid.y ?? 0);
+      if (top >= minY && top <= maxY && x >= left - 4 && x <= right + 4) {
+        return true;
+      }
+    }
+    const groundY = lvl.groundY ?? null;
+    if (groundY !== null && groundY >= minY && groundY <= maxY) {
+      return true;
+    }
+    return false;
   }
 
   function createLivingBackground() {
@@ -2414,6 +2608,8 @@ canvas {
       const alphaCapFar = 0.55;
       const alphaCapMid = 0.65;
       const alphaCapNear = 0.75;
+      const levelIndex = typeof levels !== 'undefined' ? levels.indexOf(this) : -1;
+      const isGardenVerticalFix = this.vertical && levelIndex === 6;
       const parallaxFar = 0.20;
       const parallaxMid = 0.50;
       const parallaxNear = 0.80;
@@ -2427,8 +2623,20 @@ canvas {
         console.log('Hintergrund-Ebenen: Parallax aktiv, reduceMotion =', reduceMotion ? 'ja' : 'nein');
         this._loggedBackgroundParallax = reduceMotion;
       }
+      let capFar = alphaCapFar;
+      let capMid = alphaCapMid;
+      let capNear = alphaCapNear;
+      if (isGardenVerticalFix) {
+        // Fix für vertikales Level 6: Garten-Layer verblassen nach oben hin
+        const span = Math.max(1, (this.height || (HEIGHT * 4)) - HEIGHT);
+        const ratio = Math.max(0, Math.min(1, cam.y / span));
+        const fadeNear = Math.pow(ratio, 1.05);
+        const fadeMid = Math.max(0.25, Math.pow(ratio, 0.9));
+        capNear *= fadeNear;
+        capMid *= fadeMid;
+      }
       drawThemeBackground(this, cam, reduceMotion, {
-        alphaCaps: { far: alphaCapFar, mid: alphaCapMid, near: alphaCapNear },
+        alphaCaps: { far: capFar, mid: capMid, near: capNear },
         offsets: {
           far: { x: offX_far, y: offY_far },
           mid: { x: offX_mid, y: offY_mid },
@@ -2445,6 +2653,23 @@ canvas {
       }
     }
     drawDecor(cam) {
+      const idx = typeof levels !== 'undefined' ? levels.indexOf(this) : -1;
+      const isBonusVerticalLevel = this.vertical && (
+        idx === 6 || ((this.name || '').toLowerCase().includes('garten'))
+      );
+      let decorations = this.decor;
+      if (isBonusVerticalLevel) {
+        // Fix für vertikales Level 6: Nur Deko mit Boden darunter behalten
+        decorations = decorations.filter(deco => {
+          const type = deco && deco.type ? deco.type : '';
+          const isTreeOrFlower = /tree|flower|baum|blume/i.test(type);
+          if (!isTreeOrFlower) return true;
+          const centerX = typeof deco.x === 'number' ? deco.x + ((deco.w || 0) / 2) : 0;
+          const baseY = typeof deco.y === 'number' ? deco.y : 0;
+          const sampleY = baseY + (deco.h ? deco.h * 0.25 : 0);
+          return hasSolidGroundBelow(centerX, sampleY, 56, this);
+        });
+      }
       const drawCarpet = deco => {
         const px = deco.x - cam.x;
         const py = deco.y - cam.y;
@@ -2718,7 +2943,7 @@ canvas {
       };
 
       const deferredWindows = [];
-      this.decor.forEach(deco => {
+      decorations.forEach(deco => {
         if (deco.type === 'window') {
           deferredWindows.push(deco);
           return;
@@ -3705,6 +3930,7 @@ canvas {
     if (state === GameState.GAMEOVER) buildGameOverMenu();
     if (state === GameState.VICTORY) buildVictoryMenu();
     if (state === GameState.ENDING) buildEndingMenu();
+    if (state === GameState.TITLE) { playMenuTheme(); } else { stopMenuTheme(); }
   }
 
   function buildTitleMenu() {
@@ -3721,6 +3947,64 @@ canvas {
       <small>Steuerung: WASD / Pfeile, Space = Sprung, P/Esc = Pause, Enter/E = Bestätigen</small>
     `;
     overlay.appendChild(menu);
+    // --- Versionslabel & Patchplan (minimal) ---
+    (function() {
+      const oldVer = document.getElementById('version-label');
+      if (oldVer && oldVer.parentElement) oldVer.parentElement.removeChild(oldVer);
+      const versionLabel = document.createElement('div');
+      versionLabel.id = 'version-label';
+      versionLabel.textContent = 'Alpha 3.76';
+      overlay.appendChild(versionLabel);
+
+      const oldBtn = document.getElementById('patch-btn');
+      if (oldBtn && oldBtn.parentElement) oldBtn.parentElement.removeChild(oldBtn);
+      const patchBtn = document.createElement('div');
+      patchBtn.id = 'patch-btn';
+      patchBtn.textContent = 'Patchplan';
+      overlay.appendChild(patchBtn);
+
+      const oldModal = document.getElementById('patch-modal');
+      if (oldModal && oldModal.parentElement) oldModal.parentElement.removeChild(oldModal);
+      const modal = document.createElement('div');
+      modal.id = 'patch-modal';
+      // Hinweis auf neue Änderungen im Patchplan
+      modal.innerHTML = `
+        <strong>Alpha 3.76 – Änderungen</strong><br>
+        • Titelscreen: Versionsnummer & Patchplan-Button<br>
+        • Menü: einfache Melodie<br>
+        • Bonus-Level 6 (vertikal): keine Bäume/Blumen „im Himmel“<br>
+        • Musik jetzt direkt im Titelbildschirm aktiv<br>
+        • Bonus-Level 6 (vertikal): Bäume/Blumen nur noch bodennah<br>
+        <span class="close">Schließen</span>
+      `;
+      overlay.appendChild(modal);
+
+      patchBtn.addEventListener('click', () => {
+        modal.style.display = (modal.style.display === 'none' || !modal.style.display) ? 'block' : 'none';
+      });
+      modal.querySelector('.close').addEventListener('click', () => { modal.style.display = 'none'; });
+      const oldToggle = document.getElementById('music-toggle');
+      if (oldToggle && oldToggle.parentElement) oldToggle.parentElement.removeChild(oldToggle);
+      const musicToggle = document.createElement('div');
+      musicToggle.id = 'music-toggle';
+      // hinzugefügt für Menümusik: Toggle-Beschriftung aktualisieren
+      const updateToggleLabel = () => {
+        musicToggle.textContent = menuMusicEnabled ? '🔊 Musik an' : '🔇 Musik aus';
+      };
+      updateToggleLabel();
+      overlay.appendChild(musicToggle);
+      musicToggle.addEventListener('click', () => {
+        menuMusicEnabled = !menuMusicEnabled;
+        updateToggleLabel();
+        if (menuMusicEnabled) {
+          if (gameState === GameState.TITLE) {
+            playMenuTheme();
+          }
+        } else {
+          stopMenuTheme();
+        }
+      });
+    })();
     const startBtn = document.getElementById('start-btn');
     startBtn.addEventListener('click', () => {
       ensureAudio();
@@ -4735,6 +5019,7 @@ canvas {
   setReduceMotion(reduceMotion);
   buildHud();
   buildTitleMenu();
+  if (gameState === GameState.TITLE) playMenuTheme();
 })();
 </script>
 </body>
